[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
futures = "0.3"
url = "2"
thiserror = "1"

